crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__anchor_both_ends.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (array . (element) .)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "array"
      Anchor
        Dot "."
      Tree
        ParenOpen "("
        Id "element"
        ParenClose ")"
      Anchor
        Dot "."
      ParenClose ")"
