crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__anchor_first_child.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (block . (first_statement))
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "block"
      Anchor
        Dot "."
      Tree
        ParenOpen "("
        Id "first_statement"
        ParenClose ")"
      ParenClose ")"
