crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__anchor_in_sequence.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (parent {. (first) (second) .})
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "parent"
      Seq
        BraceOpen "{"
        Anchor
          Dot "."
        Tree
          ParenOpen "("
          Id "first"
          ParenClose ")"
        Tree
          ParenOpen "("
          Id "second"
          ParenClose ")"
        Anchor
          Dot "."
        BraceClose "}"
      ParenClose ")"
