crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__anchor_last_child.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (block (last_statement) .)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "block"
      Tree
        ParenOpen "("
        Id "last_statement"
        ParenClose ")"
      Anchor
        Dot "."
      ParenClose ")"
