crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__anchor_multiple_adjacent.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (tuple . (a) . (b) . (c) .)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "tuple"
      Anchor
        Dot "."
      Tree
        ParenOpen "("
        Id "a"
        ParenClose ")"
      Anchor
        Dot "."
      Tree
        ParenOpen "("
        Id "b"
        ParenClose ")"
      Anchor
        Dot "."
      Tree
        ParenOpen "("
        Id "c"
        ParenClose ")"
      Anchor
        Dot "."
      ParenClose ")"
