crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__anchors_tests__strict_anchor_adjacency.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/anchors_tests.rs
---
Q = (dotted_name (identifier) @a .! (identifier) @b)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "dotted_name"
      Capture
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
        CaptureToken "@a"
      Anchor
        DotBang ".!"
      Capture
        Tree
          ParenOpen "("
          Id "identifier"
          ParenClose ")"
        CaptureToken "@b"
      ParenClose ")"
